# n0mn0m.github.io

./: .dockerignore  .drone.yml  .eslintrc.js  .gitignore  .markdownlint.json  .mdlrc  .pre-commit-config.yaml  404.html  Blog.sln  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Gemfile  LICENSE  README.md  _config.yml  about.markdown  atom.xml  books.markdown  build.cake  config.toml  feed.xml  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  index.html  index.markdown  jest.config.js  lists.markdown  mdl.rb  me.markdown  mkdocs.yml  package-lock.json  package.json  podcast.markdown  portfolio.markdown  pyproject.toml  resume.markdown  rss.xml  (+3 more)
.config/: dotnet-tools.json
_data/: navigation.yml
_includes/: footer.html  head.html  header.html
_posts/: 2018-05-08-getting-started.markdown  2018-05-17-publishing-with-pelican-on-windows.markdown  2018-06-29-recursive-search-with-python.markdown  2018-10-09-derbypy-introduction-to-python-modules-and-packages.markdown  2018-10-25-derbypy-intro-to-pyspark.markdown  2018-10-27-dealing-with-null-in-pyspark-transformations.markdown  2018-12-22-docker-airflow.markdown  2019-01-02-building-vim-with-anaconda-python-support.markdown  2019-01-18-vim-and-rust-in-2019.markdown  2019-02-10-subdomain-ssl-with-gitlab-pages.markdown  2019-03-31-what-is-odbc-part-1-of-3.markdown  2019-05-18-what-is-odbc-part-2-of-3.markdown  2019-05-24-what-is-odbc-part-3-of-3.markdown  2019-06-23-using-dataclasses-for-configuration.markdown  2019-07-14-creating-a-con-badge-with-pyportal.markdown  (+51 more)
docs/: me.md
(+898 files in other folders)
